@@ -52,7 +52,7 @@ class UserServiceTest {
         List<User> users = userService.findAll();
 
         assertEquals(1, users.size());
-        assertEquals("testuser", users.getFirst().getUsername());
+        assertEquals("testuser", users.get(0).getUsername());
         verify(userRepository, times(1)).findAll();
     }
 
